[package]
name = "tokio-api-reqwest-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Serializing Rust data structures into JSON format (serialization)
# Deserializing JSON data into Rust data structures (deserialization).

serde_json = "1.0.107"

# HTTP client library in Rust - interact with web services, APIs, and web resources.
reqwest = { version = "0.11.18", features = ["json"] }

# To handle asynchronous tasks in Rust
tokio = { version = "1.28.2", features = ["full"] }
